# Linkly

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  dockerfile  example-env.txt  pyproject.toml
.github/workflows/: test.yaml
app/: __init__.py  database.py  main.py  schemas.py  settings.py
app/models/: url.py
app/routes/: shortner.py
app/services/: shortner.py
app/test/: test_ping.py  test_services.py
app/utils/: dtype.py  encode_url.py
linkly/: __init__.py  database.py  main.py  schemas.py  settings.py
linkly-html/dashboard/: dashboard.js
linkly/authentication/: oauth.py
linkly/authentication/jwt/: oauth2.py  token.py
linkly/models/: url.py  users.py
linkly/routes/: auth.py  shortner.py
linkly/services/: auth.py  shortner.py
linkly/test/: test_ping.py  test_services.py
linkly/utils/: dtype.py  encode_url.py
